# AnimePipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: CI-docker.yml  CI-test-cli.yml  CI-test.yml  Release.yml
animepipeline/: __init__.py  __main__.py  loop.py
animepipeline/bt/: __init__.py  qb.py
animepipeline/cli/: README.md
animepipeline/cli/btf/: __main__.py
animepipeline/cli/rename/: __main__.py
animepipeline/config/: __init__.py  rss.py  server.py
animepipeline/encode/: __init__.py  finalrip.py  type.py
animepipeline/mediainfo/: __init__.py  gen_file_name.py  mediainfo.py  mediainfomini.py  name.py  type.py
animepipeline/pool/: __init__.py  task.py
animepipeline/post/: __init__.py  tg.py
animepipeline/rss/: __init__.py  nyaa.py  type.py
animepipeline/store/: __init__.py  task.py
animepipeline/template/: __init__.py  bangumi.py  mediainfo.py  template.py
animepipeline/util/: __init__.py  bt.py  video.py
conf/: rss.yml  server.yml
conf/params/: default.txt
deploy/: docker-compose-animepipeline.yml  docker-compose-dev.yml  docker-compose.yml
tests/: test_bt.py  test_config.py  test_encode.py  test_loop.py  test_mediainfo.py  test_pool.py  test_rss.py  test_store.py  test_template.py  test_tg.py  util.py
